restructured expression test